# xavier

./: README.md  main.py
python/: __init__.py  base.py  config.py  main.py  xavier.pyi
python/metal/: compile.py  context.py  graph.py  kernels.py
test/: test_backprop.py  test_copy.py  test_initializers.py  test_matmul.py  test_reduction.py  test_scalar.py  test_shape.py  test_slice.py  test_transform.py
xavier/: CMakeLists.txt  bind.cpp  bind.h  common.h  main.cpp
xavier/backend/metal/: CMakeLists.txt  binary.metal  copy.metal  initializers.metal  matmul.metal  metal.h  mtl_binary.cpp  mtl_binary.h  mtl_command_encoder.h  mtl_context.cpp  mtl_context.h  mtl_copy.cpp  mtl_copy.h  mtl_initializers.cpp  mtl_initializers.h  mtl_kernel.h  mtl_kernels.cpp  mtl_kernels.h  mtl_matmul.cpp  mtl_matmul.h  mtl_reduce.cpp  mtl_reduce.h  mtl_unary.cpp  mtl_unary.h  mtl_utils.h  reduction.metal  unary.metal  utils.h  utils.metal
xavier/core/: allocator.h  array.cpp  array.h  buffer.h  device.h  dtype.h  exceptions.h  graph.cpp  graph.h  id.h  iter.h  ops.cpp  ops.h  range.h  shape.h
xavier/graph/: graph.cpp  graph.h  mtl_graph.cpp  mtl_graph.h
xavier/pybind/: array.cpp  array.h  bind.cpp  utils.cpp  utils.h
xavier/python/: array.cpp  array.h  bind.cpp  bind.h  utils.cpp  utils.h
